@@ -1,14 +1,17 @@
 package org.example.fitpass.domain.post.service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 import lombok.RequiredArgsConstructor;
 import org.example.fitpass.common.Image.entity.Image;
 import org.example.fitpass.common.error.BaseException;
 import org.example.fitpass.common.error.ExceptionCode;
-import org.example.fitpass.common.s3.service.S3Service;
+import org.example.fitpass.domain.comment.repository.CommentRepository;
 import org.example.fitpass.domain.gym.entity.Gym;
 import org.example.fitpass.domain.gym.repository.GymRepository;
+import org.example.fitpass.domain.likes.LikeType;
+import org.example.fitpass.domain.likes.repository.LikeRepository;
 import org.example.fitpass.domain.post.dto.response.PostImageResponseDto;
 import org.example.fitpass.domain.post.dto.response.PostResponseDto;
 import org.example.fitpass.domain.post.entity.Post;
@@ -22,7 +25,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
+
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +34,9 @@ public class PostService {
     private final UserRepository userRepository;
     private final PostRepository postRepository;
     private final GymRepository gymRepository;
-    private final S3Service s3Service;
+    private final LikeRepository likeRepository;
+    private final CommentRepository commentRepository;
+
     //게시물 생성
     @Transactional
     public PostResponseDto createPost(PostStatus postStatus, PostType postType,List<String> postImage , String title, String content, Long userId, Long gymId) {
@@ -42,6 +47,10 @@ public class PostService {
         if (postType == PostType.NOTICE && user.getUserRole() != UserRole.OWNER) {
             throw new BaseException(ExceptionCode.NOTICE_ONLY_OWNER);
         }
+        if (!user.getId().equals(gym.getUser().getId())) {
+            throw new BaseException(ExceptionCode.NOT_GYM_OWNER);
+        }
+
         Post post = Post.of(postStatus,postType,postImage,title,content,user,gym);
         postRepository.save(post);
         return PostResponseDto.of(
@@ -53,36 +62,62 @@ public class PostService {
                 post.getUser().getId(),
                 post.getGym().getId(),
                 post.getCreatedAt(),
-                post.getUpdatedAt()
+                post.getUpdatedAt(),
+                null,
+                null,
+            null,
+            null
         );
     }
 
     //General 게시물 전체 조회
     @Transactional(readOnly = true)
-    public Page<PostResponseDto> findAllPostByGeneral(Pageable pageable, User user, Long gymId, PostType postType) {
+    public Page<PostResponseDto> findAllPostByGeneral(Pageable pageable, Long userId, Long gymId, PostType postType) {
 
-        User finduser = userRepository.findByIdOrElseThrow(user.getId());
+        User finduser = userRepository.findByIdOrElseThrow(userId);
 
         Gym gym = gymRepository.findByIdOrElseThrow(gymId);
 
         Page<Post> posts = postRepository.findByGymIdAndPostType(gymId, postType, pageable);
 
-        return posts.map(PostResponseDto::from);
+        Set<Long> likedPostIds = (userId != null) // null 값이 들어와도 에러가 발생하지 않고 사용하기 위하여 Set 사용
+            ? likeRepository.findTargetIdsByUserIdAndLikeType(userId, LikeType.POST)
+            : Collections.emptySet();
+
+        return posts.map(post -> {
+            Long postId = post.getId();
+            long likeCount = likeRepository.countByLikeTypeAndTargetId(LikeType.POST, postId);
+            long commentCount = commentRepository.countByPostId(postId); // 댓글 수 조회
+            boolean isLiked = likedPostIds.contains(postId); // 좋아요 여부 판단
+
+            return PostResponseDto.from(post, likeCount, commentCount, isLiked);
+        });
     }
 
     //Notice 게시물 조회
     @Transactional(readOnly = true)
-    public List<PostResponseDto> findAllPostByNotice(User user, Long gymId, PostType postType) {
+    public List<PostResponseDto> findAllPostByNotice(Long userId, Long gymId, PostType postType) {
 
-        User finduser = userRepository.findByIdOrElseThrow(user.getId());
+        User finduser = userRepository.findByIdOrElseThrow(userId);
 
         Gym gym = gymRepository.findByIdOrElseThrow(gymId);
 
         List<Post> posts = postRepository.findByGymIdAndPostTypeOrderByCreatedAtDesc(gymId, postType);
 
+        Set<Long> likedPostIds = (userId != null) // null 값이 들어와도 에러가 발생하지 않고 사용하기 위하여 Set 사용
+            ? likeRepository.findTargetIdsByUserIdAndLikeType(userId, LikeType.POST)
+            : Collections.emptySet();
+
         return posts.stream()
-                .map(PostResponseDto::from)
-                .collect(Collectors.toList());
+            .map(post -> {
+                Long postId = post.getId();
+                long likeCount = likeRepository.countByLikeTypeAndTargetId(LikeType.POST, postId);
+                long commentCount = commentRepository.countByPostId(postId); // 댓글 수 조회
+                boolean isLiked = likedPostIds.contains(postId); // 좋아요 여부 판단
+
+                return PostResponseDto.from(post, likeCount, commentCount, isLiked);
+            })
+            .toList(); // 또는 .collect(Collectors.toList())도 가능
     }
 
     //게시물 단건 조회
@@ -107,8 +142,7 @@ public class PostService {
 
     //게시물 수정
     @Transactional
-    public PostResponseDto updatePost(Long postId, PostStatus status, PostType postType, String title, String content, Long userId, Long gymId) {
-
+    public PostResponseDto updatePost(Long postId, PostStatus status, PostType postType, String title, String content, Long userId, Long gymId, List<String> postImage) {
         Post post = postRepository.findByIdOrElseThrow(postId);
         User findUser = userRepository.findByIdOrElseThrow(userId);
         Gym gym = gymRepository.findByIdOrElseThrow(gymId);
@@ -118,7 +152,8 @@ public class PostService {
         if (postType == PostType.NOTICE && findUser.getUserRole() != UserRole.OWNER) {
             throw new BaseException(ExceptionCode.NOTICE_ONLY_OWNER);
         }
-        post.update(status,postType,title,content);
+        post.getPostImages().clear();
+        post.update(status,postType,title,content,postImage);
         return PostResponseDto.of(
                 postId,
                 post.getPostStatus(),
@@ -128,7 +163,26 @@ public class PostService {
                 post.getUser().getId(),
                 post.getGym().getId(),
                 post.getCreatedAt(),
-                post.getUpdatedAt()
+                post.getUpdatedAt(),
+                post.getPostImages()
+                    .stream()
+                    .map(Image::getUrl)
+                    .toList(),
+                null,
+            null,
+            null
         );
+    }
+
+    public void deletePost(Long gymId, Long postId, Long userId) {
+        User findUser = userRepository.findByIdOrElseThrow(userId);
+        Gym gym = gymRepository.findByIdOrElseThrow(gymId);
+        Post post = postRepository.findByIdOrElseThrow(postId);
+
+        if (!findUser.getId().equals(post.getUser().getId())) {
+            throw new BaseException(ExceptionCode.POST_NOT_AUTHOR);
+        }
+
+        postRepository.delete(post);
     }
 }
